rawhtml.css
body {
    background-color: #162344;
    font-family:"Trebuchet MS";
    text-align: center;
  }
  
  h1
  {
    font-size: 36px;
  }

  h1, h2, h3, h4, h5, p
  {
    color: white;
    margin: 3px;
  }
  
  code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
      monospace;
  }
  
  #map
  {
      /* Set rules to fill background */
    min-height: 100%;
    
    /* Set up proportionate scaling */
    width: 100%;
    height: auto;
    
    /* Set up positioning */
    position: fixed;
    top: 0;
    left: 0;
  }

  select
  {
    height: 40px;
    color: white;
    background-color: #B31942;
    border-radius: 5px;
  }

  option
  {
    background-color: white;
    color: #B31942;
  }

  body::-webkit-scrollbar-track {
    background: white;        /* color of the tracking area */
  }
  
  body::-webkit-scrollbar-thumb {
    background-color: #3c3b6e;    /* color of the scroll thumb */
    border-radius: 20px;       /* roundness of the scroll thumb */
    border: 3px solid #B31942;  /* creates padding around scroll thumb */
  }

  #enter
  {
    border-radius:10px;
    width: 50%;
    color: #3c3b6e;
    min-width: 300px;
    max-width: 600px;
    font-size: 24px;
    text-align: center;
    font-family: 'Trebuchet MS';
  }

  #guess, #prevback
  {
    border-radius: 5px;
    height: 40px;
    font-size: 24px;
    background-color: #3c3b6e;
    color:white;
    font-family: 'Trebuchet MS';
  }

  #prevback
  {
    background-color: #B31942;
    position: fixed;
    top:10px;
    right:10px;
  }

  #states
  {
    font-size: 24px;
    font-family: 'Trebuchet MS';
  }


  #h
  {
    position: fixed;
    z-index: 1;
    width: 100%;
    top:0;
    left:0;
    background-color: #162344aa;
    padding-bottom: 10px;
  }

  #resp
  {
    padding-top:5px;
  }

  #counter
  {
    z-index: 2;
    height: 30%;
    width: 300px;
    position: fixed; 
    bottom:0%; 
    left: 0%;
    background-color: #000000dd; 
    overflow-y: auto;

  }

  #guesses
  {
    color: white;
    width: 100%;
  }

  #guesses tr td
  {
    text-overflow: ellipsis;
    color: white;
  }

  #tr0
  {
    font-weight: bold;
    font-style:italic;
  }

  #byline
  {
    margin-top:10px;
    margin-right:10px;
    position:fixed;
    top:0%;
    right:0%;
  }

  #openpar
  {
    margin-top:30px;
    margin-right:10px;
    position:fixed;
    top:0%;
    right:0%;
  }

  #puzzlenum
  {
    margin-top:50px;
    margin-right:10px;
    position:fixed;
    top:0%;
    right:0%;
  }

  a
  {
    color: white;
  }

  #howtoplay
  {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    padding: 20px;

    z-index: 4;
    min-height: 300px;
    min-width: 150px;
    overflow-y: auto;
    background-color: #000000;
    border-radius: 30px;
    border: solid black 2px;
  }

  #howtoplay li, ul
  {
    color: white;
    text-align: left;
  }

  #closehow
  {
    display:block;
    font-size:20px;
    position: fixed;
    top:20px;
    right:20px;
    color:#3c3b6e;
    background-color: white;
  }

  #cities p
  {
    font-size: 24px;
    text-align: center;
    width: 100%;
    color: #B31942;
  }

